--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"lint": "vue-cli-service lint"
 	},
 	"engines": {
-		"node": "^8.9.0",
-		"yarn": "^1.3.0"
+		"node": "^10.0.0",
+		"npm": "^6.0.0"
 	},
 	"dependencies": {
 		"fetch-jsonp": "^1.1.3",
