--- a/package.json
+++ b/package.json
@@ -15,15 +15,14 @@
 	},
 	"dependencies": {
 		"fetch-jsonp": "^1.1.3",
-		"vue": "^2.5.13"
+		"vue": "^2.5.16"
 	},
 	"devDependencies": {
-		"@vue/cli-plugin-babel": "^3.0.0-beta.1",
-		"@vue/cli-plugin-eslint": "^3.0.0-beta.1",
-		"@vue/cli-service": "^3.0.0-beta.1",
-		"vue-template-compiler": "^2.5.13",
-		"vuex": "^3.0.1",
-		"webpack": "^3.0.0"
+		"@vue/cli-plugin-babel": "^3.0.0-rc.10",
+		"@vue/cli-plugin-eslint": "^3.0.0-rc.10",
+		"@vue/cli-service": "^3.0.0-rc.10",
+		"vue-template-compiler": "^2.5.16",
+		"vuex": "^3.0.1"
 	},
 	"babel": {
 		"presets": [
