--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"fetch-jsonp": "^1.1.3",
+		"get-youtube-id": "^1.0.0",
 		"vue": "^2.5.16"
 	},
 	"devDependencies": {
