--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 	"dependencies": {
 		"fetch-jsonp": "^1.1.3",
 		"get-youtube-id": "^1.0.0",
-		"vue": "^2.5.16"
+		"vue": "^2.5.16",
+		"vue-youtube": "^1.2.5"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "^3.0.0-rc.10",
