--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
 	"description": "Collaborative playlists built on RSS.",
 	"license": "ISC",
 	"repository": "https://github.com/ky-is/mixrss",
+	"engines": {
+		"node": "^10.0.0",
+		"npm": "^6.0.0"
+	},
 	"scripts": {
 		"serve": "vue-cli-service serve --open",
 		"build": "vue-cli-service build --modern",
 		"lint": "vue-cli-service lint"
-	},
-	"engines": {
-		"node": "^10.0.0",
-		"npm": "^6.0.0"
 	},
 	"dependencies": {
 		"fetch-jsonp": "^1.1.3",
@@ -19,12 +19,16 @@
 		"vue-youtube": "^1.2.5"
 	},
 	"devDependencies": {
-		"@ky-is/vue-cli-plugin-tabs": "^1.0.0",
+		"@fullhuman/postcss-purgecss": "^1.0.1",
+		"@ky-is/vue-cli-plugin-tabs": "^1.1.0",
+		"@ky-is/vue-cli-plugin-tailwind": "^0.1.0",
 		"@vue/cli-plugin-babel": "^3.0.0",
 		"@vue/cli-plugin-eslint": "^3.0.0",
 		"@vue/cli-plugin-typescript": "^3.0.0",
 		"@vue/cli-service": "^3.0.0",
 		"@vue/eslint-config-typescript": "^3.0.0",
+		"postcss-import": "^12.0.0",
+		"tailwindcss": "^0.6.5",
 		"typescript": "^3.0.0",
 		"vue-template-compiler": "^2.5.17",
 		"vuex": "^3.0.1"
@@ -38,11 +42,6 @@
 				}
 			]
 		]
-	},
-	"postcss": {
-		"plugins": {
-			"autoprefixer": {}
-		}
 	},
 	"browserslist": {
 		"production": [
