--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
 		"@fullhuman/postcss-purgecss": "^1.0.1",
 		"@ky-is/vue-cli-plugin-tabs": "^1.1.0",
 		"@ky-is/vue-cli-plugin-tailwind": "^0.1.0",
+		"@ky-is/vue-cli-plugin-tailwind": "^1.1.0",
 		"@vue/cli-plugin-babel": "^3.0.0",
 		"@vue/cli-plugin-eslint": "^3.0.0",
 		"@vue/cli-plugin-typescript": "^3.0.0",
 		"@vue/cli-service": "^3.0.0",
 		"@vue/eslint-config-typescript": "^3.0.0",
 		"postcss-import": "^12.0.0",
+		"postcss-preset-env": "^5.3.0",
 		"tailwindcss": "^0.6.5",
 		"typescript": "^3.0.0",
 		"vue-template-compiler": "^2.5.17",
