➕ @ky-is/eslint-config

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@fullhuman/postcss-purgecss": "^1.0.1",
+		"@ky-is/eslint-config": "^1.0.0",
 		"@ky-is/vue-cli-plugin-tabs": "^1.1.0",
 		"@ky-is/vue-cli-plugin-tailwind": "^1.1.0",
 		"@vue/cli-plugin-babel": "^3.0.0",
