--- a/package.json
+++ b/package.json
@@ -1,13 +1,6 @@
 {
 	"name": "mixrss",
 	"version": "0.1.0",
-	"description": "Collaborative playlists built on RSS.",
-	"license": "ISC",
-	"repository": "https://github.com/ky-is/mixrss",
-	"engines": {
-		"node": "^10.0.0",
-		"npm": "^6.0.0"
-	},
 	"scripts": {
 		"serve": "vue-cli-service serve --open",
 		"build": "vue-cli-service build --modern",
@@ -23,12 +16,12 @@
 		"@fullhuman/postcss-purgecss": "^1.0.1",
 		"@ky-is/eslint-config": "^1.0.0",
 		"@ky-is/vue-cli-plugin-tabs": "^1.1.0",
-		"@ky-is/vue-cli-plugin-tailwind": "^1.1.0",
-		"@vue/cli-plugin-babel": "^3.0.0",
-		"@vue/cli-plugin-eslint": "^3.0.0",
-		"@vue/cli-plugin-typescript": "^3.0.0",
-		"@vue/cli-service": "^3.0.0",
-		"@vue/eslint-config-typescript": "^3.0.0",
+		"@ky-is/vue-cli-plugin-tailwind": "^1.1.1",
+		"@vue/cli-plugin-babel": "^3.0.1",
+		"@vue/cli-plugin-eslint": "^3.0.1",
+		"@vue/cli-plugin-typescript": "^3.0.1",
+		"@vue/cli-service": "^3.0.1",
+		"@vue/eslint-config-typescript": "^3.0.1",
 		"postcss-import": "^12.0.0",
 		"postcss-preset-env": "^5.3.0",
 		"tailwindcss": "^0.6.5",
@@ -56,5 +49,12 @@
 			"last 1 version",
 			"not dead"
 		]
-	}
+	},
+	"license": "ISC",
+	"repository": "https://github.com/ky-is/mixrss",
+	"engines": {
+		"node": "^10.0.0",
+		"npm": "^6.0.0"
+	},
+	"description": "Collaborative playlists built on RSS."
 }
