--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@fullhuman/postcss-purgecss": "^1.0.1",
 		"@ky-is/eslint-config": "^1.2.0",
 		"@ky-is/tailwind-color-palette": "^0.1.0",
+		"@ky-is/tailwindcss-plugin-width-height": "^0.1.0",
 		"@ky-is/vue-cli-plugin-tabs": "^1.1.0",
 		"@ky-is/vue-cli-plugin-tailwind": "^1.3.0",
 		"@vue/cli-plugin-babel": "^3.0.1",
