--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,33 +3,16 @@
 		"target": "esnext",
 		"module": "esnext",
 		"strict": true,
-		"importHelpers": true,
 		"moduleResolution": "node",
-		"esModuleInterop": true,
 		"allowSyntheticDefaultImports": true,
-		"sourceMap": true,
 		"baseUrl": ".",
-		"types": [
-			"node"
-		],
 		"paths": {
-			"@/*": [
-				"src/*"
-			]
+			"@/*": [ "src/*" ],
 		},
-		"lib": [
-			"esnext",
-			"dom",
-			"dom.iterable",
-			"scripthost"
-		]
 	},
 	"include": [
 		"src/**/*.ts",
 		"src/**/*.vue",
 		"tests/**/*.ts",
 	],
-	"exclude": [
-		"node_modules"
-	]
 }
