--- a/package.json
+++ b/package.json
@@ -2,50 +2,45 @@
 	"name": "mixrss",
 	"version": "0.1.0",
 	"scripts": {
-		"serve": "vue-cli-service serve --open",
+		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build --modern",
 		"lint": "vue-cli-service lint"
 	},
 	"dependencies": {
 		"fetch-jsonp": "^1.1.3",
-		"vue": "^2.6.10",
-		"vue-youtube": "^1.3.4"
+		"vue": "^2.6.11",
+		"vue-youtube": "^1.4.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.4.3",
-		"@babel/runtime-corejs2": "^7.4.3",
-		"@fullhuman/postcss-purgecss": "^1.2.0",
-		"@ky-is/eslint-config": "^1.7.0",
-		"@ky-is/tailwind-color-palette": "^0.1.1",
-		"@ky-is/tailwindcss-plugin-width-height": "^0.1.1",
+		"@babel/core": "^7.7.7",
+		"@fullhuman/postcss-purgecss": "^1.3.0",
+		"@ky-is/eslint-config": "^1.8.2",
+		"@ky-is/tailwind-color-palette": "^1.0.0",
+		"@ky-is/tailwindcss-plugin-width-height": "^1.0.0",
 		"@ky-is/vue-cli-plugin-tabs": "^1.1.0",
-		"@ky-is/vue-cli-plugin-tailwind": "^1.7.0",
-		"@types/node": "^11.13.7",
-		"@typescript-eslint/eslint-plugin": "^1.7.0",
-		"@typescript-eslint/parser": "^1.1.0",
-		"@vue/babel-preset-app": "^3.6.0",
-		"@vue/cli-plugin-babel": "^3.6.0",
-		"@vue/cli-plugin-eslint": "^3.6.0",
-		"@vue/cli-plugin-typescript": "^3.6.0",
-		"@vue/cli-service": "^3.6.0",
-		"@vue/eslint-config-typescript": "^4.0.0",
-		"babel-loader": "^8.0.5",
-		"cache-loader": "^3.0.0",
-		"css-loader": "^2.1.1",
-		"eslint": "^5.16.0",
-		"eslint-loader": "^2.1.2",
-		"eslint-plugin-vue": "^5.2.2",
-		"flatted": "^2.0.0",
-		"lodash": "^4.17.11",
-		"path-is-absolute": "^2.0.0",
-		"postcss-preset-env": "^6.6.0",
-		"tailwindcss": "^0.7.4",
-		"thread-loader": "^2.1.2",
-		"ts-loader": "^5.4.3",
-		"typescript": "^3.4.5",
-		"vue-loader": "^15.7.0",
-		"vue-template-compiler": "^2.6.10",
-		"vuex": "^3.1.0"
+		"@ky-is/vue-cli-plugin-tailwind": "^2.0.0",
+		"@types/node": "^13.1.2",
+		"@typescript-eslint/eslint-plugin": "^2.14.0",
+		"@typescript-eslint/parser": "^2.14.0",
+		"@vue/babel-preset-app": "^4.1.2",
+		"@vue/cli-plugin-babel": "^4.1.2",
+		"@vue/cli-plugin-eslint": "^4.1.2",
+		"@vue/cli-plugin-typescript": "^4.1.2",
+		"@vue/cli-service": "^4.1.2",
+		"@vue/eslint-config-typescript": "^5.0.1",
+		"core-js": "^3.6.1",
+		"eslint": "^6.8.0",
+		"eslint-loader": "^3.0.3",
+		"eslint-plugin-vue": "^6.1.2",
+		"postcss-preset-env": "^6.7.0",
+		"tailwindcss": "^1.1.4",
+		"ts-loader": "^6.2.1",
+		"typescript": "^3.7.4",
+		"vue-loader": "^15.8.3",
+		"vue-style-loader": "^4.1.2",
+		"vue-template-compiler": "^2.6.11",
+		"vuex": "^3.1.2",
+		"webpack": "^4.41.5"
 	},
 	"babel": {
 		"presets": [
