--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "mixrss",
 	"version": "0.1.0",
+	"license": "ISC",
+	"repository": "https://github.com/ky-is/mixrss",
+	"description": "Collaborative playlists built on RSS.",
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build --modern",
@@ -12,35 +15,34 @@
 		"vue-youtube": "^1.4.0"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.7.7",
-		"@fullhuman/postcss-purgecss": "^1.3.0",
+		"@babel/core": "^7.9.6",
+		"@fullhuman/postcss-purgecss": "^2.2.0",
 		"@ky-is/eslint-config": "^1.8.2",
 		"@ky-is/tailwind-color-palette": "^1.0.0",
 		"@ky-is/tailwindcss-plugin-width-height": "^1.0.0",
 		"@ky-is/vue-cli-plugin-tabs": "^1.1.0",
 		"@ky-is/vue-cli-plugin-tailwind": "^2.0.0",
-		"@types/node": "^13.1.2",
-		"@typescript-eslint/eslint-plugin": "^2.14.0",
-		"@typescript-eslint/parser": "^2.14.0",
-		"@vue/babel-preset-app": "^4.1.2",
-		"@vue/cli-plugin-babel": "^4.1.2",
-		"@vue/cli-plugin-eslint": "^4.1.2",
-		"@vue/cli-plugin-typescript": "^4.1.2",
-		"@vue/cli-service": "^4.1.2",
-		"@vue/eslint-config-typescript": "^5.0.1",
-		"core-js": "^3.6.1",
+		"@types/node": "^13.13.5",
+		"@typescript-eslint/eslint-plugin": "^2.31.0",
+		"@typescript-eslint/parser": "^2.31.0",
+		"@vue/babel-preset-app": "^4.3.1",
+		"@vue/cli-plugin-babel": "^4.3.1",
+		"@vue/cli-plugin-eslint": "^4.3.1",
+		"@vue/cli-plugin-typescript": "^4.3.1",
+		"@vue/cli-service": "^4.3.1",
+		"@vue/eslint-config-typescript": "^5.0.2",
+		"core-js": "^3.6.5",
 		"eslint": "^6.8.0",
-		"eslint-loader": "^3.0.3",
-		"eslint-plugin-vue": "^6.1.2",
+		"eslint-loader": "^4.0.2",
+		"eslint-plugin-vue": "^6.2.2",
 		"postcss-preset-env": "^6.7.0",
-		"tailwindcss": "^1.1.4",
-		"ts-loader": "^6.2.1",
-		"typescript": "^3.7.4",
-		"vue-loader": "^15.8.3",
+		"tailwindcss": "^1.4.5",
+		"ts-loader": "^7.0.3",
+		"typescript": "^3.8.3",
+		"vue-loader": "^15.9.2",
 		"vue-style-loader": "^4.1.2",
 		"vue-template-compiler": "^2.6.11",
-		"vuex": "^3.1.2",
-		"webpack": "^4.41.5"
+		"vuex": "^3.3.0"
 	},
 	"babel": {
 		"presets": [
@@ -69,8 +71,5 @@
 			"last 1 version",
 			"not dead"
 		]
-	},
-	"license": "ISC",
-	"repository": "https://github.com/ky-is/mixrss",
-	"description": "Collaborative playlists built on RSS."
+	}
 }
